redoing the parallax

--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -7,7 +7,11 @@
             <!-- <div data-depth="0.60"><img class="img-responsive" src="img/clouds.png"></div>   -->
 
             <!-- <div data-depth="0.20"><img class="img-responsive" src="img/clouds.png"></div>    -->
-            <div data-depth="0.00"><img class="img-responsive" src="img/2.png"></div>
+
+            <div data-depth="0.00"><img class="img-responsive" src="img/background.png"></div>
+            <div data-depth="0.10"><img class="img-responsive" src="img/shadow2.png"></div>
+            <div data-depth="0.25"><img class="img-responsive" src="img/shadow1.png"></div>
+            <div data-depth="0.00"><img class="img-responsive" src="img/buildings.png"></div>
             <div data-depth="0.40"><img class="img-responsive" src="img/clouds.png"></div>
         </div>
     </div>
