--- a/public/src/app-footer/app-footer.html
+++ b/public/src/app-footer/app-footer.html
@@ -26,24 +26,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-sm-4">
-                    <div class="footer__block footer__block--blog">
-                        <div class="footer__title">Latest from our blog</div>
-
-                        <a href="">
-                                Aenean lacinia bibendum nulla sed
-                                <small>On 2016/06/20 at 6:00 PM</small>
-                            </a>
-                        <a href="">
-                                Vestibulum id ligula porta felis euismod semper
-                                <small>On 2016/06/18 at 7:12 PM</small>
-                            </a>
-                        <a href="">
-                                Etiam porta sem malesuada magna mollis euismod
-                                <small>On 2016/06/10 at 12:59 PM</small>
-                            </a>
-                    </div>
-                </div> -->
                 <div class="col-sm-4 col-sm-offset-4">
                     <div class="footer__block">
                         <div class="footer__title">Disclaimer</div>
@@ -63,6 +45,7 @@
                 <span class="footer__copyright">© Realty</span>
                 <a route-href="route: tnc">Terms &amp; Conditions</a>
                 <a href="">Privacy Policy</a>
+                <span style="float:right">Powered by <a href="http://razrlab.com">RAZRLAB</a></span>
             </div>
 
             <div class="footer__to-top" data-rmd-action="scroll-to" data-rmd-target="html">
