--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -7,6 +7,11 @@
             <div data-depth="0.25"><img class="img-responsive" src="http://res.cloudinary.com/razrlab/image/upload/v1501401238/shadow1_yvsair.png"></div>
             <div data-depth="0.00"><img class="img-responsive" src="http://res.cloudinary.com/razrlab/image/upload/v1501401239/buildings_isuotb.png"></div>
             <div data-depth="0.70"><img class="img-responsive" src="http://res.cloudinary.com/razrlab/image/upload/v1501401239/clouds_narn5q.png"></div>
+              <!-- <div data-depth="0.00"><img class="img-responsive" src="img/background.png"></div>
+            <div data-depth="0.10"><img class="img-responsive" src="img/shadow2.png"></div>
+            <div data-depth="0.25"><img class="img-responsive" src="img/shadow1.png"></div>
+            <div data-depth="0.00"><img class="img-responsive" src="img/buildings.png"></div>
+            <div data-depth="0.70"><img class="img-responsive" src="img/clouds.png"></div> -->
         </div>
     </div>
 
