--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -209,8 +209,27 @@
                                             </label>
                                     </div>
                                 </div>
-
-                                <a data-toggle="tab" class="btn btn--circle btn-primary submit-property__button" click.delegate="finalValidationAnSubmit()">
+                                <div class="form-group form-group--float form-group--float-center">Property Deed
+                                    <input type="file" multiple accept="image/*" files.bind="model.deed">
+                                    <i class="form-group__bar"></i>
+                                </div>
+                                <ul>
+                                    <li repeat.for="file of model.deed | fileListToArray">
+                                        <h6>${file.name}: ${file.type} ${file.size / 1000} kb</h6>
+                                        <img src.bind="file | blobToUrl" width="100" height="100"><img> Last Modified: ${file.lastModifiedDate}
+                                    </li>
+                                </ul>
+                                <div class="form-group form-group--float form-group--float-center">Property Images (jpg or png)
+                                    <input type="file" multiple accept="image/*" files.bind="model.selectedFiles">
+                                    <i class="form-group__bar"></i>
+                                </div>
+                                <ul>
+                                    <li repeat.for="file of model.selectedFiles | fileListToArray">
+                                        <h6>${file.name}: ${file.type} ${file.size / 1000} kb</h6>
+                                        <img src.bind="file | blobToUrl" width="100" height="100"><img> Last Modified: ${file.lastModifiedDate}
+                                    </li>
+                                </ul>
+                                <a data-toggle="tab" class="btn btn--circle btn-primary submit-property__button" click.delegate="finalValidationAnSubmit(images)">
                                         <i class="zmdi zmdi-check"></i>
                                     </a>
                             </form>
@@ -224,8 +243,8 @@
 
                                 <h2>Successful!</h2>
                                 <p>Your proposal has been submitted and we will get back to you as soon as possible.</p>
-                                    <div class="info-box__item">
-                                    <img  class="img-responsive" src="img/ON40SC1.png" alt="" width="300" height="300" style="display: inline">
+                                <div class="info-box__item">
+                                    <img class="img-responsive" src="img/ON40SC1.png" alt="" width="300" height="300" style="display: inline">
                                 </div>
                             </div>
                         </div>
