--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -7,7 +7,7 @@
             <div data-depth="0.25"><img class="img-responsive" src="http://res.cloudinary.com/razrlab/image/upload/v1501401238/shadow1_yvsair.png"></div>
             <div data-depth="0.00"><img class="img-responsive" src="http://res.cloudinary.com/razrlab/image/upload/v1501401239/buildings_isuotb.png"></div>
             <div data-depth="0.70"><img class="img-responsive" src="http://res.cloudinary.com/razrlab/image/upload/v1501401239/clouds_narn5q.png"></div>
-              <!-- <div data-depth="0.00"><img class="img-responsive" src="img/background.png"></div>
+            <!-- <div data-depth="0.00"><img class="img-responsive" src="img/background.png"></div>
             <div data-depth="0.10"><img class="img-responsive" src="img/shadow2.png"></div>
             <div data-depth="0.25"><img class="img-responsive" src="img/shadow1.png"></div>
             <div data-depth="0.00"><img class="img-responsive" src="img/buildings.png"></div>
@@ -33,19 +33,13 @@
                         <div class="info-box__item">
                             <h3>Your first step to a brighter future</h3>
                             <p>
-                                The Property Buying Company Ltd understands that we are in difficult and challenging economic times and we strive to be a
-                                company that you can rely on to help you achieve whatever your next step may be. Whether
-                                its financial freedom you desire or making sure you can secure your new home, working together
-                                we CAN help you!! The Property Buying Company Ltd are the UK’s leading property buying company.
-                                Unlike some other home &amp; property buying companies, we are not solely reliant on investors
-                                or bank funding as we also have large cash reserves to buy your property. This allows us
-                                to remain flexible and achieve industry leading prices and completion times for your property.
-                                Our underwriters have over 10 years’ experience in the property buying industry and have
-                                extensive knowledge of the national and local markets ensuring that we can offer the best
-                                possible trade price for your property. ‘If it does not work for you, it does not work for
-                                us either’ is our company motto, and we prefer to work together with you to find the right
-                                solution for your property. What are you waiting for, call 0800 024 8444 to take your first
-                                step to selling your property!
+                                At The Property Buying Company, we understand that you can have a number of reasons to sell your property quickly. Be it
+                                to attain financial freedom or to invest in a new property, we are a Company you can rely
+                                on to achieve your goals in the quickest possible way. Being the pioneers in Dubai, we understand
+                                the ins and outs of the transactional process which can be cumbersome at times. The Property
+                                Buying Company does not rely on financial institutions – rather, we use our large cash reserve
+                                to buy properties. This gives us the ability to buy your property in the shortest period
+                                possible. If this is what you are looking for, <a route-href="route: submit">Sell Your Property Now</a>
                             </p>
                         </div>
                     </div>
@@ -61,8 +55,8 @@
                             <p>
                                 <ul style="text-align:left;color:#fff">
                                     <li>
-                                        Sell cheap, buy cheaper Looking to sell your property fast to buy another property? The Property Buying Company buys your
-                                        current property allowing you to buy your discounted property.
+                                        Selling your property can be a costly affair. At The Property Buying Company, we understand this and that’s why, we will
+                                        bear the cost of all the fees associated with the sale of your property.
                                     </li>
                                     <li>
                                         Sell buy to let property Buy to let property you need to sell quickly? Sell it to us to clear the mortgage and release the
@@ -73,7 +67,8 @@
                                         in a better position?
                                     </li>
                                     <li>
-                                        Private house sale If you're looking for a private property sale, then The Property Buying Company can help.
+                                        The Property Buying Company understands that time is money too. This is factored in the price offered. Therefore, our offer
+                                        will be the best in the market to sell your property in the shortest time.
                                     </li>
                                 </ul>
                             </p>
@@ -96,8 +91,9 @@
                             <img class="img-responsive" src="img/O9IY331.png" alt="" width="300" height="300">
 
                             <h3>No fees whatsoever</h3>
-                            <p>The Property Buying Company understands that selling your property can be costly. We will make
-                                sure that all the costs are covered by ourselves.</p>
+                            <p>Selling your property can be a costly affair. At The Property Buying Company, we understand this
+                                and that’s why, we will bear the cost of all the fees associated with the sale of your property.
+                                </p>
                         </div>
                     </div>
 
@@ -106,8 +102,8 @@
                             <img class="img-responsive" src="img/OIHEI81.png" alt="" width="300" height="300">
 
                             <h3>Completion date to suit you</h3>
-                            <p>The Property Buying Company will work with you to achieve your desired completion date. Tell
-                                us the timescales and we will work towards that all important date.</p>
+                            <p>The timetable for the transaction will be set according to your convenience and needs. This way,
+                                we can ensure you get your money precisely when you need it.</p>
                         </div>
                     </div>
 
@@ -116,8 +112,9 @@
                             <img class="img-responsive" src="img/OAI50P1.png" alt="" width="300" height="300">
 
                             <h3>Best trade prices paid</h3>
-                            <p>The Property Buying Company have various buying solutions allowing us an unprecedented level
-                                of flexibility to achieve a better price for your property.</p>
+                            <p>The Property Buying Company understands that time is money too. This is factored in the price
+                                offered. Therefore, our offer will be the best in the market to sell your property in the
+                                shortest time. </p>
                         </div>
                     </div>
                 </div>
@@ -126,10 +123,7 @@
 
         <section class="section" style="text-align: center;">
             <div class="container">
-                <h3>How The Property Buying Company can help you</h3>
-                <p>This is the journey of a normal house sale in today’s market. The Property Buying Company can reduce the
-                    time of a sale and may actually save them money rather than having to wait 8 – 12 months to sell their
-                    property on the open market and having to pay their own fees.</p>
+                <h3>The Typical Selling Process</h3>
             </div>
         </section>
         <section id="cd-timeline" class="cd-container">
@@ -141,9 +135,9 @@
                 <div class="cd-timeline-content">
                     <div row="row">
                         <div class="col-sm-7">
-                            <h2>Listed at $ 100,000</h2>
+                            <h2>Listed at AED 1,000,000</h2>
                             <p style="font-size: 1.5em;">
-                                Joe put their property on with an agent for $100,000 on their advice.
+                                You put your property for sale with an agent for AED 1,000,000
                             </p>
                         </div>
                         <div class="col-sm-4">
@@ -165,16 +159,16 @@
                 <div class="cd-timeline-content">
                     <div row="row">
                         <div class="col-sm-7">
-                            <h2>reduced to $ 95,000</h2>
+                            <h2>Reduced to AED 950,000</h2>
                             <p style="font-size: 1.5em;">
-                                After 3 months with no interest they reduce to $ 95,000
+                                After 2 months with not a lot of interest, you reduce your asking price to AED 950,000
                             </p>
                         </div>
                         <div class="col-sm-4">
                             <img class="img-responsive" src="img/month3.png" alt="" width="200" height="200">
                         </div>
                     </div>
-                    <span class="cd-date">Month 3</span>
+                    <span class="cd-date">Month 2</span>
                 </div>
                 <!-- cd-timeline-content -->
             </div>
@@ -189,16 +183,15 @@
                 <div class="cd-timeline-content">
                     <div row="row">
                         <div class="col-sm-7">
-                            <h2>reduced to $ 90,000</h2>
+                            <h2>Reduced to AED 900,000</h2>
                             <p style="font-size: 1.5em;">
-                                After 6 months they reduce again to $ 90,000 and achieve a sale.
-                            </p>
+                                After 3 months with little interest, you decide to reduce your asking price again to AED 900,000 and find a potential buyer</p>
                         </div>
                         <div class="col-sm-4">
                             <img class="img-responsive" src="img/month6.png" alt="" width="200" height="200">
                         </div>
                     </div>
-                    <span class="cd-date">Month 6</span>
+                    <span class="cd-date">Month 3</span>
                 </div>
                 <!-- cd-timeline-content -->
             </div>
@@ -213,16 +206,16 @@
                 <div class="cd-timeline-content">
                     <div row="row">
                         <div class="col-sm-7">
-                            <h2>reduced to $ 85,000</h2>
+                            <h2>Reduced to AED 850,000</h2>
                             <p style="font-size: 1.5em;">
-                                After 3 months their sale falls through. He put their house on for $ 85,000
+                                Due to unforeseen circumstances, the deal does not go through. You decide to reduce the asking price to AED 875,000 upon the advice of your agent as they need to close the deal to get their commission 
                             </p>
                         </div>
                         <div class="col-sm-4">
                             <img class="img-responsive" src="img/fallsThrough.png" alt="" width="200" height="200">
                         </div>
                     </div>
-                    <span class="cd-date">Month 9</span>
+                    <span class="cd-date">Month 4</span>
                 </div>
                 <!-- cd-timeline-content -->
             </div>
@@ -237,16 +230,16 @@
                 <div class="cd-timeline-content">
                     <div row="row">
                         <div class="col-sm-7">
-                            <h2>Sold for $ 80,000</h2>
+                            <h2>Sold for AED 800,000</h2>
                             <p style="font-size: 1.5em;">
-                                He sell their house for $ 80,000 and it completes 3 months later
+                                With a little bit of frustration and eagerness to sell, you decide to sell your property for AED 800,000 which then takes 1 month to close the deal
                             </p>
                         </div>
                         <div class="col-sm-4">
                             <img class="img-responsive" src="img/month12.png" alt="" width="200" height="200">
                         </div>
                     </div>
-                    <span class="cd-date">Month 12</span>
+                    <span class="cd-date">Month 5</span>
                 </div>
                 <!-- cd-timeline-content -->
             </div>
@@ -264,22 +257,21 @@
                             <img class="img-responsive" src="img/moneylost.png" alt="" width="200" height="200">
                         </div>
                         <div class="col-sm-7">
-                            <h2>Net total $ 66,575</h2>
+                            <h2>Net in your pocket AED 751,000</h2>
                             <p style="font-size: 1.5em;">
-                                He did not actually net the full amount of a sale. He is mistaken if he thinks that sale amount is what he got. He has forgotten
-                                that the following fees apply :
+                              You do not actually net the full amount. The following fees are applicable:
                                 <ul>
-                                    <li><b>$ 8400</b> mortage</li>
-                                    <li><b>$ 1200</b> council tax.</li>
-                                    <li><b>$ 1500</b> utility bills</li>
-                                    <li><b>$ 1500</b> Charges</li>
-                                    <li><b>$ 750</b> Agent Fees</li>
-                                    <li><b>$ 75</b> EPC</li>
+                                    <li><b>AED 22,000 </b> mortgage for 6 months</li>
+                                    <li><b>AED 3,000 </b> housing Fees for 6 months</li>
+                                    <li><b>AED 6,000</b> utility for 6 months</li>
+                                    <li><b>AED 16,000</b> in agent Commission</li>
+                                    <li><b>AED 2,000</b> NOC</li>
+                                    <li>Most importantly, it has taken nearly 6 months to sell your property!</li>
                                 </ul>
                             </p>
                         </div>
                     </div>
-                    <span class="cd-date">Month 12</span>
+                    <span class="cd-date">Month 6</span>
                 </div>
                 <!-- cd-timeline-content -->
             </div>
@@ -288,8 +280,8 @@
         <!-- cd-timeline -->
         <section class="section" style="text-align: center;">
             <div class="container">
-                <h3>The Property Buying Company could have completed in 2-3 weeks and paid up $ 80,000</h3>
-                <h3>A massive potential saving of $13,425</h3>
+                <h3>The Property Buying Company can complete this entire transaction within 2-3 weeks by paying you your final asking price of AED 800,000</h3>
+                <h3>A massive potential saving of AED 49,000 and 5 months’ worth of time!</h3>
             </div>
         </section>
         <a class="btn brn-sm btn-default btn-static" style="position: fixed; bottom: 75%; right: 0px;" route-href="route: submit">SELL NOW</a>
