--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="col-sm-12 col-md-8">
                         <div class="info-box__item">
-                            <h3>Your first step to a brighter future</h3>
+                            <h3>Your First Step to a Brighter Future</h3>
                             <p>
                                 At The Property Buying Company, we understand that you can have a number of reasons to sell your property quickly. Be it
                                 to attain financial freedom or to invest in a new property, we are a Company you can rely
@@ -90,7 +90,7 @@
                         <div class="info-box__item">
                             <img class="img-responsive" src="img/O9IY331.png" alt="" width="300" height="300">
 
-                            <h3>No fees whatsoever</h3>
+                            <h3>No Fees Whatsoever</h3>
                             <p>Selling your property can be a costly affair. At The Property Buying Company, we understand this
                                 and that’s why, we will bear the cost of all the fees associated with the sale of your property.
                                 </p>
@@ -101,7 +101,7 @@
                         <div class="info-box__item">
                             <img class="img-responsive" src="img/OIHEI81.png" alt="" width="300" height="300">
 
-                            <h3>Completion date to suit you</h3>
+                            <h3>Flexible Timeline</h3>
                             <p>The timetable for the transaction will be set according to your convenience and needs. This way,
                                 we can ensure you get your money precisely when you need it.</p>
                         </div>
@@ -111,7 +111,7 @@
                         <div class="info-box__item">
                             <img class="img-responsive" src="img/OAI50P1.png" alt="" width="300" height="300">
 
-                            <h3>Best trade prices paid</h3>
+                            <h3>Best Price to Time Ratio</h3>
                             <p>The Property Buying Company understands that time is money too. This is factored in the price
                                 offered. Therefore, our offer will be the best in the market to sell your property in the
                                 shortest time. </p>
@@ -208,7 +208,7 @@
                         <div class="col-sm-7">
                             <h2>Reduced to AED 850,000</h2>
                             <p style="font-size: 1.5em;">
-                                Due to unforeseen circumstances, the deal does not go through. You decide to reduce the asking price to AED 875,000 upon the advice of your agent as they need to close the deal to get their commission 
+                                Due to unforeseen circumstances, the deal does not go through. You decide to reduce the asking price to AED 875,000 upon the advice of your agent, as they need to close the deal to get their commission 
                             </p>
                         </div>
                         <div class="col-sm-4">
