--- a/public/src/submit/submit.html
+++ b/public/src/submit/submit.html
@@ -209,24 +209,26 @@
                                             </label>
                                     </div>
                                 </div>
-                                <div class="form-group form-group--float form-group--float-center">Property Deed
-                                    <input type="file" multiple accept="image/*" files.bind="deed">
+                                <div class="form-group form-group--float form-group--float-center">Property Deed (jpg/png)
+                                    <input type="file" accept="image/*" files.bind="deed">
                                     <i class="form-group__bar"></i>
                                 </div>
                                 <ul>
                                     <li repeat.for="file of deed | fileListToArray">
                                         <h6>${file.name}: ${file.type} ${file.size / 1000} kb</h6>
-                                        <img src.bind="file | blobToUrl" width="100" height="100"><img> Last Modified: ${file.lastModifiedDate}
+                                        <img src.bind="file | blobToUrl" width="100" height="100"><img> 
+                                        <!-- Last Modified: ${file.lastModifiedDate} -->
                                     </li>
                                 </ul>
-                                <div class="form-group form-group--float form-group--float-center">Property Images (jpg or png)
+                                <div class="form-group form-group--float form-group--float-center">Property Images (jpg/png)
                                     <input type="file" multiple accept="image/*" files.bind="selectedFiles">
                                     <i class="form-group__bar"></i>
                                 </div>
                                 <ul>
                                     <li repeat.for="file of selectedFiles | fileListToArray">
                                         <h6>${file.name}: ${file.type} ${file.size / 1000} kb</h6>
-                                        <img src.bind="file | blobToUrl" width="100" height="100"><img> Last Modified: ${file.lastModifiedDate}
+                                        <img src.bind="file | blobToUrl" width="100" height="100"><img> 
+                                        <!-- Last Modified: ${file.lastModifiedDate} -->
                                     </li>
                                 </ul>
                                 <a data-toggle="tab" class="btn btn--circle btn-primary submit-property__button" click.delegate="finalValidationAnSubmit(images)">
