new stying and including 3 points

--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -46,38 +46,37 @@
                 </div>
             </div>
         </section>
-        <section class="section info-box" style="background:#3F51B5">
+        <section class="section info-box" style="background:#F3F3F3">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-md-8">
+                    <div class="col-sm-4">
                         <div class="info-box__item">
-                            <h3 style="color:#fff">Why use us</h3>
-                            <p>
-                                <ul style="text-align:left;color:#fff">
-                                    <li>
-                                        Selling your property can be a costly affair. At The Property Buying Company, we understand this and that’s why, we will
-                                        bear the cost of all the fees associated with the sale of your property.
-                                    </li>
-                                    <li>
-                                        Sell buy to let property Buy to let property you need to sell quickly? Sell it to us to clear the mortgage and release the
-                                        capital.
-                                    </li>
-                                    <li>
-                                        Property part exchange buying a new property and struggling to meet builders' timescales or worried about losing out to someone
-                                        in a better position?
-                                    </li>
-                                    <li>
-                                        The Property Buying Company understands that time is money too. This is factored in the price offered. Therefore, our offer
-                                        will be the best in the market to sell your property in the shortest time.
-                                    </li>
-                                </ul>
-                            </p>
+                            <img class="img-responsive" src="img/quickCash.png" alt=""  height="300">
+
+                            <h3>Quick Cash</h3>
+                            <p>Be it for another property or investment, or any other reason, we are here to provide the quick
+                                cash to fulfil your needs.</p>
                         </div>
                     </div>
 
-                    <div class="col-sm-4 col-md-4">
+                    <div class="col-sm-4">
                         <div class="info-box__item">
-                            <img class="img-responsive" src="img/investing.png" alt="">
+                            <img class="img-responsive" src="img/moving.png" alt="" height="300">
+
+                            <h3>Moving Away</h3>
+                            <p>Whether its your plans that have changed or your circumstances, you have decided to move to a
+                                different country. Sell your property before you finish packing and we will happily allow
+                                15 days to ease the move. </p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="info-box__item">
+                            <img class="img-responsive" src="img/rain.png" alt="" height="300">
+
+                            <h3>Financial Difficulties</h3>
+                            <p>If you find yourself struggling with loan and mortgage payments, sell your property to us to
+                                free yourself from the debt burden. </p>
                         </div>
                     </div>
                 </div>
@@ -93,7 +92,7 @@
                             <h3>No Fees Whatsoever</h3>
                             <p>Selling your property can be a costly affair. At The Property Buying Company, we understand this
                                 and that’s why, we will bear the cost of all the fees associated with the sale of your property.
-                                </p>
+                            </p>
                         </div>
                     </div>
 
@@ -208,7 +207,8 @@
                         <div class="col-sm-7">
                             <h2>Reduced to AED 850,000</h2>
                             <p style="font-size: 1.5em;">
-                                Due to unforeseen circumstances, the deal does not go through. You decide to reduce the asking price to AED 875,000 upon the advice of your agent, as they need to close the deal to get their commission 
+                                Due to unforeseen circumstances, the deal does not go through. You decide to reduce the asking price to AED 875,000 upon
+                                the advice of your agent, as they need to close the deal to get their commission
                             </p>
                         </div>
                         <div class="col-sm-4">
@@ -232,7 +232,8 @@
                         <div class="col-sm-7">
                             <h2>Sold for AED 800,000</h2>
                             <p style="font-size: 1.5em;">
-                                With a little bit of frustration and eagerness to sell, you decide to sell your property for AED 800,000 which then takes 1 month to close the deal
+                                With a little bit of frustration and eagerness to sell, you decide to sell your property for AED 800,000 which then takes
+                                1 month to close the deal
                             </p>
                         </div>
                         <div class="col-sm-4">
@@ -259,7 +260,7 @@
                         <div class="col-sm-7">
                             <h2>Net in your pocket AED 751,000</h2>
                             <p style="font-size: 1.5em;">
-                              You do not actually net the full amount. The following fees are applicable:
+                                You do not actually net the full amount. The following fees are applicable:
                                 <ul>
                                     <li><b>AED 22,000 </b> mortgage for 6 months</li>
                                     <li><b>AED 3,000 </b> housing Fees for 6 months</li>
@@ -280,7 +281,8 @@
         <!-- cd-timeline -->
         <section class="section" style="text-align: center;">
             <div class="container">
-                <h3>The Property Buying Company can complete this entire transaction within 2-3 weeks by paying you your final asking price of AED 800,000</h3>
+                <h3>The Property Buying Company can complete this entire transaction within 2-3 weeks by paying you your final
+                    asking price of AED 800,000</h3>
                 <h3>A massive potential saving of AED 49,000 and 5 months’ worth of time!</h3>
             </div>
         </section>
